[gd_scene load_steps=3 format=3 uid="uid://cpli8psni3vyd"]

[ext_resource type="Script" uid="uid://cqh1lrsy7hoah" path="res://scripts/ui/hud.gd" id="1_0mwgc"]

[sub_resource type="LabelSettings" id="LabelSettings_wh2we"]
font_size = 40

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_0mwgc")

[node name="HealthLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
anchor_left = 0.00694444
anchor_top = 0.986111
anchor_right = 0.007
anchor_bottom = 0.986111
offset_top = -55.0
offset_right = 67.936
text = "100"
label_settings = SubResource("LabelSettings_wh2we")
metadata/_edit_use_anchors_ = true

[node name="PickupMessage" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -48.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 31.0
grow_horizontal = 0
label_settings = SubResource("LabelSettings_wh2we")
horizontal_alignment = 2

[node name="AmmoLabel" type="Label" parent="."]
unique_name_in_owner = true
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.9236111
anchor_top = 0.9861111
anchor_right = 0.92366666
anchor_bottom = 0.9861111
offset_top = -55.0
offset_right = 67.936
grow_horizontal = 0
text = "Ammo: 10/10"
label_settings = SubResource("LabelSettings_wh2we")
horizontal_alignment = 2
metadata/_edit_use_anchors_ = true
